# ocaml

./: .gitignore  README.md
aoc/: .ocamlformat  dune  dune-project  file.txt  main.ml  read_file.ml
aoc/day1/: day1.ml  day1.mli  day1.py  dune
aoc/day2/: acd.ml  day2.ml  day2.mli  day2.py  dune
aoc/day3/: day3.ml  dune
aoc/util/: dune  read_file.ml
basics/hello-world/: hello.ml
codes/: conditions  conditions.ml  hello.ml  lists.ml  plus_one.ml  tree_tuple.ml
exercise/: chapter2.txt  chapter3.txt
exercise-ocaml/: dune  last_two.ml  nth_element.ml  tail_of_list.ml  tree.ml
exercises/: Exercise-1.md
exercises/exercise-1/: Exercise-1.md
functions/factorial/: main.ml
functions/power/: dune  main.ml
functions/tail_recursion_fact/: dune  main.ml
hello-world/: hello.ml
leetcode/: contains_duplicate.ml  dune
leetcode/arrays/: dune  group_anagrams.ml  product_self.ml  two_sum.ml  valid_anagram.ml
leetcode/linkedlist/: .ocamlformat  dune  reverse_list.ml
leetcode/stack/: dune  minimum_stack.ml  valid_parantheses.ml
lists/length/: main.ml
lists/sum/: main.ml
lists/sum_short_syntax/: main.ml
lists/unit_testing/: test.ml
ocaml-beginning/chapter-2/: exercise.ml
ocaml-from-beginning/Chapter1/: a.out  multiples.ml
ocaml-from-beginning/chapter10/: fib.ml  rect.ml
ocaml-from-beginning/chapter11/: tree.ml  tree_exercises.ml
ocaml-from-beginning/chapter15/: concate_list.ml  list_mem.ml
programming_caml/: cardioid
real-world-ocaml/: code.ml  dune
testing/: test.ml
trees/: main  main.ml
trees_records/: main.ml
(+77 files in other folders)
